fix: CSS selector spacing in nav-submenu

--- a/public/css/nav-submenu.css
+++ b/public/css/nav-submenu.css
@@ -1,30 +1,16 @@
-/* Navigation Groups and Submenus */
-.nav-group {
-    position: relative;
-}
-
-.nav-group>.nav-link {
-    cursor: pointer;
-    text-decoration: none;
-}
-
-.nav-submenu {
-    list-style: none;
-    padding: 0;
-    margin: 0;
     display: none;
-}
+    }
 
-.nav-group:hover .nav-submenu {
-    display: block;
-}
+    .nav-group:hover .nav-submenu {
+        display: block;
+    }
 
-.nav-submenu .nav-link {
-    padding-left: 3rem;
-    font-size: 0.9rem;
-    text-decoration: none;
-}
+    .nav-submenu .nav-link {
+        padding-left: 3rem;
+        font-size: 0.9rem;
+        text-decoration: none;
+    }
 
-.nav-submenu .nav-link i {
-    font-size: 1rem;
-}
+    .nav-submenu .nav-link i {
+        font-size: 1rem;
+    }
